[package]
name = "txtly"
version = "0.1.0"
edition = "2021"

description = "A library to colorize and format terminal text, allowing changes like bold, italic, and background colors."
license = "MIT"
authors = ["pablo"]  # Replace with your name and email
repository = "https://github.com/mnsdojo/txtly"  # Replace with your repository URL

[dependencies]
